# zephyr-ai

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
app/api/: admin.py  conversations.py  feedback.py  knowledge.py  main.py  rag.py
app/conversations/: __init__.py  schemas.py  service.py
app/core/: config.py  database.py  diagnostics.py  embedding_client.py  gateway_sign.py  llm_client.py  logging.py  vector_utils.py  version.py
app/feedback/: __init__.py  schemas.py  service.py
app/ingestion/: __init__.py  markdown.py  service.py
app/knowledge/: __init__.py  schemas.py  service.py
app/models/: __init__.py  base.py  chunk.py  conversation.py  document.py  feedback.py
app/rag/: debug_service.py  prompt.py  schemas.py  service.py
app/repositories/: __init__.py  chunk_repository.py  document_repository.py
app/retrieval/: __init__.py  service.py
cli/: ingest_docs.py  rag_smoke.py
docs/: admin-diagnostics-api.md  conversations-feedback-api.md  knowledge-api.md  rag-chat-api.md  rag-debug-api.md
docs/plans/: 2026-06-19-rag-agent-implementation-roadmap.md
migrations/: env.py
migrations/versions/: 0001_init.py  0002_vector_2048.py  0003_feedback.py
tests/: conftest.py
tests/unit/: test_admin_api.py  test_api_routes.py  test_conversation_api.py  test_core.py  test_document_repository.py  test_embedding_ingestion.py  test_feedback_api.py  test_gateway_sign.py  test_knowledge_api.py  test_knowledge_service.py  (+9 more)
(+2 files in other folders)
